--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-layout.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-layout.scss
@@ -185,7 +185,7 @@
     }
 
     .ag-overlay-loading-wrapper {
-        background-color: rgba(ag-param(background-color), 0.66);
+        @include ag-color-property(background-color, modal-overlay-background-color);
     }
 
     .ag-overlay-loading-center {
