--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_widgets.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_widgets.scss
@@ -55,9 +55,7 @@
         &:disabled {
             @include ag-color-property(color, disabled-foreground-color);
             @include ag-color-property(background-color, input-disabled-background-color);
-            @if ag-param-is-set(input-border-color) {
-                border-color: rgba(ag-param(input-border-color), 0.3);
-            }
+            @include ag-color-property(border-color, input-disabled-border-color);
         }
 
         &:focus {
@@ -655,9 +653,7 @@
         @include ag-focus-range-track
     }
     @else {
-        @if ag-param(input-focus-border-color) {
-            background-color: mix(ag-param(border-color), ag-param(input-focus-border-color), 50%);
-        }
+        @include ag-color-property(background-color, input-focus-border-color);
     }
 }
 
@@ -671,7 +667,7 @@
         -webkit-appearance: none;
         width: ag-param(icon-size);
         height: ag-param(icon-size);
-        @include ag-color-property(background, background-color);
+        @include ag-color-property(background-color, background-color);
         border: 1px solid;
         @include ag-color-property(border-color, checkbox-unchecked-color);
         border-radius: ag-param(icon-size);
@@ -691,13 +687,6 @@
 @mixin ag-internal-active-range-thumb {
     @if mixin-exists(ag-active-range-thumb) {
         @include ag-active-range-thumb
-    }
-    @else {
-        @if ag-param(input-focus-border-color) {
-            box-shadow: ag-param(input-focus-box-shadow), inset 0 0 5px;
-            // TODO color this is wrong... Very wrong???
-            @include ag-color-property(box-shadow, input-focus-border-color);
-        }
     }
 }
 
