--- a/community-modules/core/src/styles/mixins/_ag-theme-params.scss
+++ b/community-modules/core/src/styles/mixins/_ag-theme-params.scss
@@ -21,7 +21,8 @@
     $opacity: null,
     $lighten: null,
     $darken: null, 
-    $mix: null
+    $mix: null,
+    $self-overlay: null
 ) {
     $derived: (
         "--ag-is-derived-value": true,
@@ -50,6 +51,9 @@
     }
     @if $mix != null {
         $derived: map-merge($derived, ("mix": $mix));
+    }
+    @if $self-overlay != null {
+        $derived: map-merge($derived, ("self-overlay": $self-overlay));
     }
     @return $derived;
 }
@@ -214,11 +218,15 @@ $-ag-params: null !default;
     $resolved: -ag-apply-derived-operator($params, $resolved, $derived, "mix");
     $resolved: -ag-apply-derived-operator($params, $resolved, $derived, "lighten");
     $resolved: -ag-apply-derived-operator($params, $resolved, $derived, "darken");
+    $resolved: -ag-apply-derived-operator($params, $resolved, $derived, "self-overlay");
 
     @return -ag-resolve-param-value($params, $resolved);
 }
 
 @function -ag-apply-derived-operator($params, $lhs, $derived, $operator) {
+    @if $lhs == null {
+        @return $lhs;
+    }
     $rhs: map-get($derived, $operator);
     @if $rhs == null {
         @return $lhs;
@@ -305,4 +313,23 @@ $-ag-params: null !default;
         @error "Expected argument to $darken to be between 0 and 100, got #{inspect($rhs)} instead.";
     }
     @return darken($lhs, $rhs);
+}
+
+
+@function -ag-operator-function-self-overlay($params, $color, $times) {
+    $color: -ag-require-type($color, "color", "value before $self-overlay");
+    $times: -ag-require-type($times, "number", "argument to $self-overlay");
+    @if $times < 0 or $times > 100 {
+        @error "Expected argument to $self-overlay to be between 0 and 100, got #{inspect($times)} instead.";
+    }
+
+    $solidity: 1 - opacity($color);
+    $output-solidity: 1;
+    @if $times > 0 {
+        @for $i from 1 through $times {
+            $output-solidity: $output-solidity * $solidity;
+        }
+    }
+
+    @return rgba($color, 1 - $output-solidity);
 }
